# amicsartromanic/api/orm.py
@@ -1,5 +1,5 @@
-from sqlalchemy import create_engine, Column, DateTime, String, Integer
-from sqlalchemy.orm import scoped_session, sessionmaker
+from sqlalchemy import create_engine, Column, DateTime, String, Integer, Table, ForeignKey
+from sqlalchemy.orm import scoped_session, sessionmaker, relationship
 from sqlalchemy.ext.declarative import declarative_base
 
 
@@ -19,8 +19,6 @@ class Component(Base):
             self.component_name = component_name
         if component_base_path is not None:
             self.component_base_path = component_base_path
-#        if tags is not None:
-#            self.tags = tags
         if component_scss_path is not None:
             self.component_scss_path = component_scss_path
         if component_js_path is not None:
@@ -31,6 +29,43 @@ class Component(Base):
     def dump(self):
         return dict([(k,v) for k,v in self.__dict__.items() if k[0] != '_'])
 
+images_news_association = Table('news_images', Base.metadata,
+    Column('news_id', Integer, ForeignKey('news.id')),
+    Column('images_id', Integer, ForeignKey('images.id'))
+)
+
+class News(Base):
+    __tablename__ = 'news'
+    id = Column(Integer, primary_key=True)
+    news_summary = Column(String(128))
+    news_body = Column(String(128))
+    news_image = relationship("Images", secondary=images_news_association)
+    
+    def update(self, id=None, news_summary=None, news_body=None, news_image=None):
+        if news_summary is not None:
+            self.news_summary = news_summary
+        if news_body is not None:
+            self.news_body = news_body
+        if news_image is not None:
+            self.news_image = news_image
+                    
+    def dump(self):
+        return dict([(k,v) for k,v in self.__dict__.items() if k[0] != '_'])
+
+class Images(Base):
+    __tablename__ = 'images'
+    id = Column(Integer, primary_key=True)
+    image_path = Column(String(128))
+    image_footer = Column(String(128))
+   
+    def update(self, id=None, image_path=None, image_footer=None):
+        if image_path is not None:
+            self.image_path = image_path
+        if image_footer is not None:
+            self.image_footer = image_footer
+                    
+    def dump(self):
+        return dict([(k,v) for k,v in self.__dict__.items() if k[0] != '_'])
 
 def init_db(uri):
     engine = create_engine(uri, convert_unicode=True)
